Add social media links

--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -158,7 +158,7 @@
         <!-- Footer -->
         <footer>
             <div>
-                <a href="html_advanced/20-index.html">Facebook</a>
+                <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
                 <a href="https://twitter.com/holbertonschool">Twitter</a>
                 <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
             </div>
