--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -18,11 +18,11 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="#services">Services</a></li>
-                        <li><a href="#works ">Works</a></li>
-                        <li><a href="#about ">About</a></li>
+                        <li><a href="#works">Works</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="#latest_news">Latest news</a></li>
-                        <li><a href="#testimonials ">Testimonials</a></li>
-                        <li><a href="#contact ">Contact</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -133,21 +133,18 @@
                     </header>
                     <div>
                         <article>
-                            <blockquote>
+                            <blockquote cite = "Yuri Y.">
                                 I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-                                <cite>Yuri Y.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <blockquote>
+                            <blockquote cite = "Dorrie S.">
                                 Thank you so much for your help. Techium company is awesome!
-                                <cite>Dorrie S.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <blockquote>
+                            <blockquote cite = "Sven H.">
                                 I love your system. Definitely worth the investment. I'd be lost without Techium company.
-                                <cite>Sven H.</cite>
                             </blockquote>
                         </article>
                     </div>
