--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -133,19 +133,22 @@
                     </header>
                     <div>
                         <article>
-                            <blockquote cite = "Yuri Y.">
-                                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                            <blockquote>
+                               I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                             </blockquote>
+                            <p>Yuri Y.</p>
                         </article>
                         <article>
-                            <blockquote cite = "Dorrie S.">
-                                Thank you so much for your help. Techium company is awesome!
+                            <blockquote>
+                               Thank you so much for your help. Techium company is awesome!
                             </blockquote>
+                            <p>Dorrie S.</p>
                         </article>
                         <article>
-                            <blockquote cite = "Sven H.">
-                                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                            <blockquote>
+                               I love your system. Definitely worth the investment. I'd be lost without Techium company.
                             </blockquote>
+                            <p>Sven H.</p>
                         </article>
                     </div>
                 </div>
