--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -134,20 +134,20 @@
                     <div>
                         <article>
                             <blockquote>
-                                <cite>Yuri Y.</cite>
-                                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                                <footer>-Yuri Y.</footer>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
-                               <cite>Dorrie S.</cite> 
-                               Thank you so much for your help. Techium company is awesome!
+                               <p>Thank you so much for your help. Techium company is awesome!</p>
+                               <footer>-Dorrie S.</footer>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
-                               <cite>Sven H.</cite>
-                               I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                               <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                               <footer>-Sven H.</footer>
                             </blockquote>
                         </article>
                     </div>
