--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -135,19 +135,19 @@
                         <article>
                             <blockquote>
                                 <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
-                                <footer>-Yuri Y.</footer>
+                                <footer><cite>-Yuri Y.</cite></footer>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
                                <p>Thank you so much for your help. Techium company is awesome!</p>
-                               <footer>-Dorrie S.</footer>
+                               <footer><cite>-Dorrie S</cite>.</footer>
                             </blockquote>
                         </article>
                         <article>
                             <blockquote>
                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
-                               <footer>-Sven H.</footer>
+                               <footer><cite>-Sven H.</cite></footer>
                             </blockquote>
                         </article>
                     </div>
