--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -65,7 +65,7 @@
         </div>
       </section>
       <!– Services section –>
-      <section id="services" class="section">
+      <section id="section-services" class="section">
         <div class="section-services"></div>
         <div class="container">
           <header class="section-header">
