--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -66,7 +66,7 @@
       </section>
       <!– Services section –>
       <section id="section-services" class="section">
-        <div class="section-services"></div>
+        <section class="section-services"></section>
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
