use class not id

--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -65,7 +65,7 @@
         </div>
       </section>
       <!– Services section –>
-      <section id="section-services" class="section">
+      <section class="section-services">
         <section class="section-services"></section>
         <div class="container">
           <header class="section-header">
