try adding to existing section

--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -25,27 +25,21 @@
             </li>
             <li class="nav-item">
               <a href="#services" class="nav-link">Services</a>
-              
             </li>
             <li class="nav-item">
               <a href="#works" class="nav-link">Works</a>
-              <div class="section-works"></div>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
-              <div class="section-about-us"></div>
             </li>
             <li class="nav-item">
               <a href="#latest_news" class="nav-link">Latest news</a>
-              <div class="section-latest-news"></div>
             </li>
             <li class="nav-item">
               <a href="#testimonials" class="nav-link">Testimonials</a>
-              <div class="section-testimonial"></div>
             </li>
             <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
-              <div class="section-contact"></div>
             </li>
           </ul>
         </nav>
@@ -65,8 +59,7 @@
         </div>
       </section>
       <!– Services section –>
-      <section class="section-services">
-        <section class="section-services"></section>
+      <section id="services" class="section-services">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
