--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -11,7 +11,7 @@
       <div>
         <div>
           <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
-          <nav>
+          <nav class="nav">
             <div>
               <p><a href="#">Home</a></p>
               <p><a href="#">About</a></p>
@@ -26,7 +26,7 @@
       </div>
     </header>
     <main>
-    <h1>Homepage</h1>
+      <h1>Homepage</h1>
       <section>
         <div class="container">
           <div class="row">
@@ -143,7 +143,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-5">
