--- a/form/04-article.html
+++ b/form/04-article.html
@@ -197,7 +197,7 @@
                       <label for="your-comment">Comment</label>
                       <div class="form-field">
                         <span class="form-field-container">
-                          <input type="textarea" name="your-comment" id="your-comment" placeholder="Write your comment here" 
+                          <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" 
                           pattern="[A-Za-zÀ-ž\s]{4,}" minlength="10" columns="30" rows="6"
                           accesskey="c" required>
                         </span>
