--- a/form/05-article.html
+++ b/form/05-article.html
@@ -157,7 +157,9 @@
                           <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" 
                           pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on"
                           accesskey="f" required>
+                          <i class="form-field-icon"></i>
                         </span>
+                        <p class="form-help">First name should be at least 3 characters and only contains letters</p>
                       </div>
                     </div>
                     <div class="form-group col-1-2">
@@ -167,7 +169,9 @@
                           <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" 
                           pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on"
                           accesskey="l" required>
+                          <i class="form-field-icon"></i>
                         </span>
+                        <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
                       </div>
                     </div>
                     <div class="form-group col-2-3">
@@ -190,7 +194,9 @@
                           <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" 
                           pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on"
                           accesskey="t" required>
+                          <i class="form-field-icon"></i>
                         </span>
+                        <p class="form-help">Title should be at least 4 characters and only contains letters</p>
                       </div>                   
                     </div>
                     <div class="form-group col-2-3">
@@ -201,6 +207,7 @@
                           pattern="[A-Za-zÀ-ž\s]{4,}" minlength="10" cols="30" rows="6"
                           accesskey="c" required>
                         </span>
+                        <p class="form-help">Comment should be at least 10 characters</p>
                       </div>
                     </div>
                     <div class="form-group">
