add tag to 3rd div

--- a/form/05-article.html
+++ b/form/05-article.html
@@ -182,6 +182,7 @@
                           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on"
                           accesskey="e" required>
                         </span>
+                        <i class="form-field-icon"></i>
                       </div>             
                     </div>
                 </fieldset>
