add another i and transition

--- a/form/05-article.html
+++ b/form/05-article.html
@@ -208,6 +208,7 @@
                           pattern="[A-Za-zÀ-ž\s]{4,}" minlength="10" cols="30" rows="6"
                           accesskey="c" required>
                         </span>
+                        <i class="form-field-icon"></i>
                         <p class="form-help">Comment should be at least 10 characters</p>
                       </div>
                     </div>
