--- a/Bootstrap/0-index.html
+++ b/Bootstrap/0-index.html
@@ -6,6 +6,12 @@
         <title>Holberton - Web Stack - Bootstrap</title>
         <meta name="description" content="Bootstrap is a free and open-source CSS framework">
 
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
     </head>
     <body>
 
