--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -11,21 +11,21 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </head>
-    <body style="background-color: dark;">
-        <div>
+    <body>
+        <div class="tabbed-list">
             <h1>Bob Dylan</h1>
 
-            <ul>
-                <li>
-                    <a>Introduction</a>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#tab-1">Introduction</a>
                 </li>
-                <li>
-                    <a>Discography</a>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#tab-2">Discography</a>
                 </li>
             </ul>
-            <div>
+            <div class="tab-content">
 
-                <div>
+                <div class="tab-pane fade show active" id="tab-1">
                     <p>
                         Bob Dylan (born Robert Allen Zimmerman; May 24, 1941) is an American singer-songwriter, author, and visual artist who has been a major figure in popular culture for more than fifty years. 
                     </p>
@@ -35,39 +35,42 @@
                     </p>
                 </div>
 
-                <div>
-                    <ul>
+                <div class="tab-pane fade" id="tab-2">
+                    <ul class="list-unstyled">
                         <li>
-                            <a>Bob Dylan <em>(1962)</em></a>
-                            <div>
-                                <p>
+                            <a class="d-block" data-bs-toggle="collapse" href="#collapseBob" role="button" aria-expanded="false" aria-controls="collapseBob">
+                           Bob Dylan <em>(1962)</em></a>
+                           <div>
+                                <p class="collapse" id="collapseBob">
                                     Bob Dylan is the debut studio album by American singer-songwriter Bob Dylan, released on March 19, 1962 by Columbia Records. Produced by Columbia's legendary talent scout John H. Hammond, who signed Dylan to the label, the album features folk standards, plus two original compositions, "Talkin' New York" and "Song to Woody".
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a>The Freewheelin' Bob Dylan <em>(1963)</em></a>
+                            <a class="d-block" data-bs-toggle="collapse" href="#collapseFree" role="button" aria-expanded="false" aria-controls="collapseFree">
+                            The Freewheelin' Bob Dylan <em>(1963)</em></a>
                             <div>
-                                <p>
+                                <p class="collapse" id="collapseFree">
                                     The Freewheelin' Bob Dylan is the second studio album by American singer-songwriter Bob Dylan, released on May 27, 1963 by Columbia Records. Whereas his self-titled debut album Bob Dylan had contained only two original songs, Freewheelin' represented the beginning of Dylan's writing contemporary words to traditional melodies. Eleven of the thirteen songs on the album are Dylan's original compositions. The album opens with "Blowin' in the Wind", which became an anthem of the 1960s, and an international hit for folk trio Peter, Paul & Mary soon after the release of Freewheelin'. The album featured several other songs which came to be regarded as among Dylan's best compositions and classics of the 1960s folk scene: "Girl from the North Country", "Masters of War", "A Hard Rain's a-Gonna Fall" and "Don't Think Twice, It's All Right".
                                 </p>
                             </div>
                         </li>
-
                         <li>
-                            <a>The Times They Are a-Changin' <em>(1964)</em></a>
+                            <a class="d-block" data-bs-toggle="collapse" href="#collapseTimes" role="button" aria-expanded="false" aria-controls="collapseTimes">
+                            The Times They Are a-Changin' <em>(1964)</em></a>
                             <div>
-                                <p>
+                                <p class="collapse" id="collapseTimes">
                                     The Times They Are a-Changin' is the third studio album by American singer-songwriter Bob Dylan, released on January 13, 1964 by Columbia Records. Whereas his previous albums Bob Dylan and The Freewheelin' Bob Dylan consisted of original material among cover songs, Dylan's third album was the first to feature only original compositions. The album consists mostly of stark, sparsely arranged ballads concerning issues such as racism, poverty, and social change. The title track is one of Dylan's most famous; many feel that it captures the spirit of social and political upheaval that characterized the 1960s.
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a>Another Side of Bob Dylan <em>(1964)</em></a>
+                            <a class="d-block" data-bs-toggle="collapse" href="#collapseSide" role="button" aria-expanded="false" aria-controls="collapseSide">
+                            Another Side of Bob Dylan <em>(1964)</em></a>
                             <div>
-                                <p>
+                                <p class="collapse" id="collapseSide">
                                     Another Side of Bob Dylan is the fourth studio album by American singer and songwriter Bob Dylan, released on August 8, 1964 by Columbia Records.
                                 </p>
                             </div>
@@ -76,5 +79,6 @@
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
