--- a/Bootstrap/4-index.html
+++ b/Bootstrap/4-index.html
@@ -12,8 +12,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="tabbed-list">
-            <h1>Bob Dylan</h1>
+        <div class="tabbed-list col-lg">
+            <h1 mt-4 mb-4>Bob Dylan</h1>
 
             <ul class="nav nav-tabs">
                 <li class="nav-item">
@@ -23,7 +23,7 @@
                     <a class="nav-link" data-toggle="tab" href="#tab-2">Discography</a>
                 </li>
             </ul>
-            <div class="tab-content">
+            <div class="tab-content p-3">
 
                 <div class="tab-pane fade show active" id="tab-1">
                     <p>
