--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -52,9 +52,9 @@
 
          <!--line 6 -->
         <div class="row">
-                <div class="col-md-4 col-12 text-white p-2" style ="text-align: center; background-color: blue;">Primary</div>
-                <div class="col-md-4 col-12 text-white p-2" style ="text-align: center; background-color: green;">Success</div>
-                <div class="col-md-4 col-12 text-white p-2" style ="text-align: center; background-color: red;">Danger</div>
+                <div class="col-md-2 col-12 text-white p-2 justify-content-start" style ="text-align: center; background-color: blue;">Primary</div>
+                <div class="col-md-2 col-12 text-white p-2 justify-content-center" style ="text-align: center; background-color: green;">Success</div>
+                <div class="col-md-2 col-12 text-white p-2 justify-content-end" style ="text-align: center; background-color: red;">Danger</div>
         </div>
 
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
