--- a/Javascript_advanced/runjscode.html
+++ b/Javascript_advanced/runjscode.html
@@ -6,6 +6,6 @@
     <title>run js</title>
 </head>
 <body>
-    <script src="1-nested_functions.js"></script>
+    <script src="2-function_me.js"></script>
 </body>
 </html>
