--- a/Javascript_advanced/runjscode.html
+++ b/Javascript_advanced/runjscode.html
@@ -6,6 +6,6 @@
     <title>run js</title>
 </head>
 <body>
-    <script src="3-classrooms.js"></script>
+    <script src="5-mode.js"></script>
 </body>
 </html>
