--- a/Javascript_advanced/5-index.html
+++ b/Javascript_advanced/5-index.html
@@ -10,9 +10,9 @@
     <p>!!!!!PAGES YOU VIEW IN THIS WINDOW WON'T APPEAR IN THE BROWSWER HISTORY AND WON'T LEAVE OTHER TRACES, LIKE COOKIES, ON THE COMPUTER.</p>
 <footer>
     Welcome Atlas!
-    <button id="Spooky">Spooky</button>
-    <button id="DarkMode">Dark Mode</button>
-    <button id="ScreamMode">Scream Mode</button>
+    <!--<button id="Spooky">Spooky</button>-->
+    <!--<button id="DarkMode">Dark Mode</button>-->
+    <!--<button id="ScreamMode">Scream Mode</button>-->
     <button id="changeColorButton">Change Background Color</button>
 </footer>
 <script src="5-mode.js"></script>
