--- a/Javascript_advanced/5-index.html
+++ b/Javascript_advanced/5-index.html
@@ -6,14 +6,14 @@
     <title>Vanilla Javascript</title>
 </head>
 <body>
-    <h1 id="title">YOU'RE BROWSING AS A GUEST</h1>
-    <p>!!!!!PAGES YOU VIEW IN THIS WINDOW WON'T APPEAR IN THE BROWSWER HISTORY AND WON'T LEAVE OTHER TRACES, LIKE COOKIES, ON THE COMPUTER.</p>
+    <h1 id="title">You are browsing as a guest</h1>
+    <p>!!!!!Pages you view in this window won't appear in the browser.</p>
 <footer>
-    Welcome Atlas!
+    <!-- Welcome Atlas! -->
     <!--<button id="Spooky">Spooky</button>-->
     <!--<button id="DarkMode">Dark Mode</button>-->
     <!--<button id="ScreamMode">Scream Mode</button>-->
-    <button id="changeColorButton">Change Background Color</button>
+    <!-- <button id="changeColorButton">Change Background Color</button> -->
 </footer>
 <script src="5-mode.js"></script>
 </body>
