--- a/Javascript_advanced/runjscode.html
+++ b/Javascript_advanced/runjscode.html
@@ -6,6 +6,6 @@
     <title>run js</title>
 </head>
 <body>
-    <script src="6-hogwarts.js"></script>
+    <script src="14-wikipedia.js"></script>
 </body>
 </html>
